# Sber_test

./: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/deposit/: router.py  schemas.py  services.py
app/tests/: conftest.py  test_deposit.py
