[tool.poetry]
name = "sber-test"
version = "0.1.0"
description = ""
authors = ["Alangard <73427768+Alangard@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
alembic = "^1.13.2"
pydantic = "^2.8.2"
SQLAlchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
flake8 = "^7.1.1"
python-dateutil = "^2.9.0.post0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
